sandbox/output
GildedRoseTest.java:36: error: cannot find symbol
            .filter(GildedRose.isSellInGreaterThan0())
                              ^
  symbol:   method isSellInGreaterThan0()
  location: class GildedRose
1 error
